--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil</title>
+  <title>Profil Dipl. Ing. Volker Schuhmacher</title>
   <meta name="description" content="Volker Schuhmacher in Duisburg Rumeln-Kaldenhausen">
   <meta name="author" content="fontanero management systems">
   <meta name="keywords" content="Agile Coach Rumeln-Kaldenhausen">
