--- a/credits.html
+++ b/credits.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Impressum</title>
+  <title>Credits</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -15,27 +15,17 @@
 <body>
   <header class="primary-header">
     <div class="container">
-      <picture>
-        <source media="(min-width: 50em)" srcset="innenhafenII.png" width="100%">
-        <img src="innenhafenII.png">
-      </picture>
-      <h1>Impressum</h1>
+      <h1>Credits</h1>
 
     </div>
   </header>
   <div class="container">
-
-    <p>Volker Winfried Schuhmacher<br />
-      Hochfeldstr. 129<br />
-      47239 Duisburg</p>
-
-    <h2>Kontakt</h2>
-    <p>Telefon: 123456<br />
-      E-Mail: volker.schuhmacher@t-online.de</p>
-
-    <h3>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h3>
-    <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
-      teilzunehmen.</p>
+    <p>“Scrum” icon used on the home page is by Rflor from Noun Project.</p>
+<a href="https://thenounproject.com/browse/icons/term/scrum/" target="_blank" title="Scrum Icons">Noun Project</a> (CC BY 3.0)
+<p>"mindset" icon used on the home page is by Vectorstall from Noun Project.</p>
+  <a href="https://thenounproject.com/browse/icons/term/mindset/" target="_blank" title="mindset Icons">Noun Project</a> (CC BY 3.0)
+<p>"innenhafenII" picture used on impressum page is by Elisabeth</p>
+<a href="http://www.wasserundfarbe.de/galerie/" target="_blank" title="wasserundfarbe">Wasser und Farbe</a>
     <footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100">
       <div class="container">
         <div class="primary-footer-wrapper">
@@ -43,9 +33,9 @@
             <nav class="footer-nav">
               <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Impressum</a></li>
+                <li><a href="impressum.html">Impressum</a></li>
                 <li><a href="datenschutz.html">Datenschutz</a></li>
-                <li><a href="credits.html">Credits</a></li>
+                <li><a href="#">Credits</a></li>
               </ul>
             </nav>
           </div>
