--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="UTF-8" />
@@ -79,8 +79,10 @@
           <div class="primary-footer-nav">
             <nav class="footer-nav">
               <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
-                <li><a href="datenschutz.html">Datenschutz</a></li>
+                <li><a href="#">Datenschutz</a></li>
+                <li><a href="credits.html">Credits</a></li>
               </ul>
             </nav>
           </div>
