--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
           <div class="primary-footer-nav">
             <nav class="footer-nav">
               <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
+                <li><a href="#">Home</a></li>
                 <li><a href="impressum.html">Impressum</a></li>
                 <li><a href="datenschutz.html">Datenschutz</a></li>
+                <li><a href="credits.html">Credits</a></li>
               </ul>
             </nav>
           </div>
