--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Profil Dipl. Ing. Volker Schuhmacher</title>
   <meta name="description" content="Volker Schuhmacher in Duisburg Rumeln-Kaldenhausen">
   <meta name="author" content="fontanero management systems">
-  <meta name="keywords" content="Agile Coach Rumeln-Kaldenhausen">
+  <meta name="keywords" content="Agile Coach SAFe Programm Consultant">
+  <meta name="keywords" content="KANBAN Lean Transformation Management Scrum">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
@@ -28,7 +29,7 @@
 
   <div class="container">
     <div class="even-columns">
-      <div>
+      <div class="blob-1">
         <h2>Persönliche Daten</h2>
         <hr>
         <p>Volker Winfried Schuhmacher</br>
@@ -37,7 +38,7 @@
           XING xing.com/profile/Volker_Schuhmacher</br>
         <h2>Ausbildung</h2>
         <hr>
-        <p class="blob-1 text-accent-400">Universität Duisburg</p>
+        <p class="text-accent-400">Universität Duisburg</p>
         <p>Schwerpunkt: Allg. Maschinenbau</br>
           Abschluss: Diplom Ingenieur</p>
 
@@ -51,8 +52,8 @@
           Neugier</p>
         <p class="text-accent-400">Qualifikationen</p>
         <ul>
-          <li>Certified SAFe Practice Consultant</li>
-          <li>Kanban Management Professional</li>
+          <li>Certified SAFe Practice Consultant (SPC)</li>
+          <li>Kanban Management Professional (KMP)</li>
           <li>Professional Scrum Master I</li>
           <li>Project Management Professional (PMP)</li>
         </ul>
@@ -61,45 +62,45 @@
           Französisch: Fließend, Spanisch: Gut, Arabisch:
           Grundkenntnisse</p>
         <p class="text-accent-400">Interessen</p>
-        <p>IPv6, FreeBSD, Kochen, Rad fahren</p>
+        <p>IPv6, FreeBSD, Kochen, Radfahren</p>
       </div>
       <div>
         <h2>Berufliche Laufbahn</h2>
         <hr>
         <p class="text-accent-400">Dezember 2018 - heute</p>
-        <p class="fw-semi-bold fs-500">Deutsche Telekom IT GmbH</p>
-        <p>Agile Coach</p>
+        <p>Deutsche Telekom IT GmbH</p>
+        <p class="fw-semi-bold fs-500">Agile Coach</p>
         <p>Change & Transformation Management,</br>
           Agile Academy for Release Train Engineers</p>
         <hr>
         <p class="text-accent-400">April 2017 - November 2018</p>
-        <p class="fw-semi-bold fs-500">Deutsche Telekom IT GmbH</p>
-        <p>IT Portfolio Manager</p>
+        <p>Deutsche Telekom IT GmbH</p>
+        <p class="fw-semi-bold fs-500">IT Portfolio Manager</p>
         <p>Roadmap Delivery Managment</p>
         <hr>
         <p class="text-accent-400">November 2011 - März 2017</p>
-        <p class="fw-semi-bold fs-500">T-Systems International GmbH</p>
-        <p>Senior Programm Manager</p>
+        <p>T-Systems International GmbH</p>
+        <p class="fw-semi-bold fs-500">Senior Programm Manager</p>
         <hr>
         <p class="text-accent-400">September 2009 - Oktober 2011</p>
-        <p class="fw-semi-bold fs-500">Deutsche Telekom AG Geschäftskunden</p>
-        <p>Senior Programm Manager</p>
+        <p>Deutsche Telekom AG Geschäftskunden</p>
+        <p class="fw-semi-bold fs-500">Senior Programm Manager</p>
         <hr>
         <p class="text-accent-400">Februar 2006 - August 2009</p>
-        <p class="fw-semi-bold fs-500">T-Systems Enterprise Services GmbH</p>
-        <p>Delivery Manager</p>
+        <p>T-Systems Enterprise Services GmbH</p>
+        <p class="fw-semi-bold fs-500">Delivery Manager</p>
         <hr>
         <p class="text-accent-400">Januar 2005 - Januar 2006</p>
-        <p class="fw-semi-bold fs-500">NCR GmbH</p>
-        <p>Senior Project Manager</p>
+        <p>NCR GmbH</p>
+        <p class="fw-semi-bold fs-500">Senior Project Manager</p>
         <hr>
         <p class="text-accent-400">Juli 1997 - Dezember 2004</p>
-        <p class="fw-semi-bold fs-500">Sybase GmbH</p>
-        <p>Principal Consultant</p>
+        <p>Sybase GmbH</p>
+        <p class="fw-semi-bold fs-500">Principal Consultant</p>
         <hr>
         <p class="blob-2 text-accent-400">Juni 1994 - Juni 1997</p>
-        <p class="fw-semi-bold fs-500">Vodafone D2 GmbH</p>
-        <p>DV Koordinator</p>
+        <p>Vodafone D2 GmbH</p>
+        <p class="fw-semi-bold fs-500">DV Koordinator</p>
       </div>
     </div>
 
