local google fonts

--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profil Dipl. Ing. Volker Schuhmacher</title>
-  <meta name="description" content="Volker Schuhmacher in Duisburg Rumeln-Kaldenhausen">
+  <meta name="description" content="Volker Schuhmacher in Duisburg">
   <meta name="author" content="fontanero management systems">
   <meta name="keywords" content="Agile Coach SAFe Programm Consultant">
   <meta name="keywords" content="KANBAN Lean Transformation Management Scrum">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -111,9 +107,9 @@
             <nav class="footer-nav">
               <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
                 <li><a href="#">Home</a></li>
-                <li><a href="impressum.html">Impressum</a></li>
-                <li><a href="datenschutz.html">Datenschutz</a></li>
-                <li><a href="credits.html">Credits</a></li>
+                <li><a href="impressum.html" target="_self">Impressum</a></li>
+                <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
+                <li><a href="credits.html" target="_self">Credits</a></li>
               </ul>
             </nav>
           </div>
