--- a/credits.html
+++ b/credits.html
@@ -5,10 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Credits</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,9 +28,9 @@
           <div class="primary-footer-nav">
             <nav class="footer-nav">
               <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="impressum.html">Impressum</a></li>
-                <li><a href="datenschutz.html">Datenschutz</a></li>
+                <li><a href="index.html" target="_self">Home</a></li>
+                <li><a href="impressum.html" target="_self">Impressum</a></li>
+                <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
                 <li><a href="#">Credits</a></li>
               </ul>
             </nav>
