--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Datenschutz</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
+  <meta name="description" content="Datenschutzerklaerung Pflichtangaben">
+  <meta name="author" content="fontanero management systems">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -79,10 +77,10 @@
           <div class="primary-footer-nav">
             <nav class="footer-nav">
               <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="impressum.html">Impressum</a></li>
+                <li><a href="index.html" target="_self">Home</a></li>
+                <li><a href="impressum.html" target="_self">Impressum</a></li>
                 <li><a href="#">Datenschutz</a></li>
-                <li><a href="credits.html">Credits</a></li>
+                <li><a href="credits.html" target="_self">Credits</a></li>
               </ul>
             </nav>
           </div>
