--- a/impressum.html
+++ b/impressum.html
@@ -4,11 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="fontanero management systems">
   <title>Impressum</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +14,7 @@
     <div class="container">
       <picture>
         <source media="(min-width: 50em)" srcset="innenhafenII.png" width="100%">
-        <img src="innenhafenII.png">
+        <img src="innenhafenII.png" alt="Innenhafen Duisburg">
       </picture>
       <h1>Impressum</h1>
 
@@ -42,10 +39,10 @@
           <div class="primary-footer-nav">
             <nav class="footer-nav">
               <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"  target="_self">Home</a></li>
                 <li><a href="#">Impressum</a></li>
-                <li><a href="datenschutz.html">Datenschutz</a></li>
-                <li><a href="credits.html">Credits</a></li>
+                <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
+                <li><a href="credits.html" target="_self">Credits</a></li>
               </ul>
             </nav>
           </div>
