content changes, linkedin, layout improvements

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   </header>
 
   <div class="container">
-    <div class="even-columns">
+    <div class="even-columns padding-bottom-400">
       <div class="blob-1">
         <h2>Persönliche Daten</h2>
         <hr>
         <p>Volker Winfried Schuhmacher</br>
           47239 Duisburg</br>
           volker.schuhmacher@t-online.de</br>
-          XING xing.com/profile/Volker_Schuhmacher</br>
+          <a href="https://www.linkedin.com/in/volker-schuhmacher-1263802b9/" target="_blank">in</a>
         <h2>Ausbildung</h2>
         <hr>
         <p class="text-accent-400">Universität Duisburg</p>
@@ -40,12 +40,12 @@
 
         <h2>Kenntnisse & Fähigkeiten</h2>
         <hr>
-        <p class="text-accent-400">Ich biete</p>
-        <p>KANBAN, Scrum, Scaled Agile Framework
-          (SAFe), Flight level, Agile
-          Methods, Projekt Management, Jira, Miro, Vernetztes Denken,
+        <p class="text-accent-400">Ich biete:</p>
+        <p> Vernetztes Denken,
           Hands-on-Mentalität, Eigenverantwortung,
-          Neugier</p>
+          Neugier,</br>KANBAN, Scrum, Scaled Agile Framework
+          (SAFe), Flight level, Agile
+          Methods, Jira, Miro,</br> Projekt Management</p>
         <p class="text-accent-400">Qualifikationen</p>
         <ul>
           <li>Certified SAFe Practice Consultant (SPC)</li>
@@ -54,49 +54,42 @@
           <li>Project Management Professional (PMP)</li>
         </ul>
         <p class="text-accent-400">Sprachen</br>
-        <p>Deutsch: Muttersprache, Englisch: Fließend,
-          Französisch: Fließend, Spanisch: Gut, Arabisch:
+        <p>Englisch: verhandlungssicher,
+          Französisch: fließend, Spanisch: gut, Arabisch:
           Grundkenntnisse</p>
         <p class="text-accent-400">Interessen</p>
-        <p>IPv6, FreeBSD, Kochen, Radfahren</p>
+        <p>IPv6 und FreeBSD in der Praxis als technische Herausforderungen, Kochen für und mit Freunden, Radfahren zur Entspannung</p>
       </div>
       <div>
         <h2>Berufliche Laufbahn</h2>
         <hr>
-        <p class="text-accent-400">Dezember 2018 - heute</p>
-        <p>Deutsche Telekom IT GmbH</p>
-        <p class="fw-semi-bold fs-500">Agile Coach</p>
+        <p class="text-accent-400">seit Dezember 2018</p>
+        <p><span class="fw-semi-bold fs-500">Agile Coach</span> - Deutsche Telekom IT GmbH</p>
         <p>Change & Transformation Management,</br>
           Agile Academy for Release Train Engineers</p>
         <hr>
         <p class="text-accent-400">April 2017 - November 2018</p>
-        <p>Deutsche Telekom IT GmbH</p>
-        <p class="fw-semi-bold fs-500">IT Portfolio Manager</p>
-        <p>Roadmap Delivery Managment</p>
+        <p><span class="fw-semi-bold fs-500">IT Portfolio Manager</span> - Telekom IT GmbH</p>
+        <p>Roadmap Delivery Managment,</br>
+        ERP Projekte im Umfeld Mergers &amp; Acqusitions</p>
         <hr>
         <p class="text-accent-400">November 2011 - März 2017</p>
-        <p>T-Systems International GmbH</p>
-        <p class="fw-semi-bold fs-500">Senior Programm Manager</p>
+        <p><span class="fw-semi-bold fs-500">Senior Programm Manager</span> - T-Systems International GmbH</p>
         <hr>
         <p class="text-accent-400">September 2009 - Oktober 2011</p>
-        <p>Deutsche Telekom AG Geschäftskunden</p>
-        <p class="fw-semi-bold fs-500">Senior Programm Manager</p>
+        <p><span class="fw-semi-bold fs-500">Senior Programm Manager</span> - Telekom AG Geschäftskunden</p>
         <hr>
         <p class="text-accent-400">Februar 2006 - August 2009</p>
-        <p>T-Systems Enterprise Services GmbH</p>
-        <p class="fw-semi-bold fs-500">Delivery Manager</p>
+        <p><span class="fw-semi-bold fs-500">Delivery Manager</span> - T-Systems Enterprise Services GmbH</p>
         <hr>
         <p class="text-accent-400">Januar 2005 - Januar 2006</p>
-        <p>NCR GmbH</p>
-        <p class="fw-semi-bold fs-500">Senior Project Manager</p>
+        <p><span class="fw-semi-bold fs-500">Senior Project Manager</span> - NCR GmbH</p>
         <hr>
         <p class="text-accent-400">Juli 1997 - Dezember 2004</p>
-        <p>Sybase GmbH</p>
-        <p class="fw-semi-bold fs-500">Principal Consultant</p>
+        <p><span class="fw-semi-bold fs-500">Principal Consultant</span> - Sybase GmbH</p>
         <hr>
         <p class="blob-2 text-accent-400">Juni 1994 - Juni 1997</p>
-        <p>Vodafone D2 GmbH</p>
-        <p class="fw-semi-bold fs-500">DV Koordinator</p>
+        <p><span class="fw-semi-bold fs-500">DV Koordinator</span> - Vodafone D2 GmbH</p>
       </div>
     </div>
 
