add linked , enhanced mobile layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <p>Volker Winfried Schuhmacher</br>
           47239 Duisburg</br>
           volker.schuhmacher@t-online.de</br>
-          <a href="https://www.linkedin.com/in/volker-schuhmacher-1263802b9/" target="_blank">in</a>
         <h2>Ausbildung</h2>
         <hr>
         <p class="text-accent-400">Universität Duisburg</p>
@@ -108,6 +107,12 @@
           </div>
           <div class="primary-footer-form">
             <p>&copy; Volker Schuhmacher 2024</p>
+          </div>
+          <div class="primary-footer-social">
+            <a href="https://www.linkedin.com/in/volker-schuhmacher-1263802b9/" target="_blank">
+              <img src="In-White-14@2x.png" alt="linkedin logo"/>
+            </a>
+          </div>
           </div>
         </div>
       </div>
