--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="primary-footer-wrapper">
           <div class="primary-footer-nav">
             <nav class="footer-nav">
-              <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
+              <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer">
                 <li><a href="#">Home</a></li>
                 <li><a href="impressum.html" target="_self">Impressum</a></li>
                 <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
