--- a/credits.html
+++ b/credits.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Credits</title>
+  <!--
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
+    -->
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,18 +22,22 @@
     </div>
   </header>
   <div class="container">
-    <p>“Scrum” icon used on the home page is by Rflor from Noun Project.</p>
-<a href="https://thenounproject.com/browse/icons/term/scrum/" target="_blank" title="Scrum Icons">Noun Project</a> (CC BY 3.0)
-<p>"mindset" icon used on the home page is by Vectorstall from Noun Project.</p>
-  <a href="https://thenounproject.com/browse/icons/term/mindset/" target="_blank" title="mindset Icons">Noun Project</a> (CC BY 3.0)
-<p>"innenhafenII" picture used on impressum page is by Elisabeth</p>
-<a href="http://www.wasserundfarbe.de/galerie/" target="_blank" title="wasserundfarbe">Wasser und Farbe</a>
-    <footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100">
+    <div class="padding-bottom-400">
+      <p>“Scrum” icon used on the home page is by Rflor from Noun Project.</p>
+      <a href="https://thenounproject.com/browse/icons/term/scrum/" target="_blank" title="Scrum Icons">Noun Project</a>
+      (CC BY 3.0)
+      <p>"mindset" icon used on the home page is by Vectorstall from Noun Project.</p>
+      <a href="https://thenounproject.com/browse/icons/term/mindset/" target="_blank" title="mindset Icons">Noun
+        Project</a> (CC BY 3.0)
+      <p>"innenhafenII" picture used on impressum page is by Elisabeth</p>
+      <a href="http://www.wasserundfarbe.de/galerie/" target="_blank" title="wasserundfarbe">Wasser und Farbe</a>
+    </div>
+    <footer class="primary-footer | padding-block-400 bg-neutral-900 text-neutral-100">
       <div class="container">
         <div class="primary-footer-wrapper">
           <div class="primary-footer-nav">
             <nav class="footer-nav">
-              <ul>
+              <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer">
                 <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="impressum.html" target="_self">Impressum</a></li>
                 <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
@@ -38,9 +48,15 @@
           <div class="primary-footer-form">
             <p>&copy; Volker Schuhmacher 2024</p>
           </div>
+          <div class="primary-footer-social">
+            <a href="https://www.linkedin.com/in/volker-schuhmacher-1263802b9/" target="_blank">
+              <img src="In-White-14@2x.png" alt="linkedin logo" />
+            </a>
+          </div>
         </div>
       </div>
-    </footer>
+  </div>
+  </footer>
   </div>
 </body>
 
