--- a/impressum.html
+++ b/impressum.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="fontanero management systems">
   <title>Impressum</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -14,32 +13,32 @@
     <div class="container">
       <picture>
         <source media="(min-width: 50em)" srcset="innenhafenII.png" width="100%">
-        <img src="innenhafenII.png" alt="Innenhafen Duisburg">
+        <img src="innenhafenII.png" alt="Innenhafen Duisburg bei Nacht">
       </picture>
       <h1>Impressum</h1>
 
     </div>
   </header>
   <div class="container">
-
-    <p>Volker Winfried Schuhmacher<br />
+    <div class="padding-bottom-400" <p>Volker Winfried Schuhmacher<br />
       Hochfeldstr. 129<br />
       47239 Duisburg</p>
 
-    <h2>Kontakt</h2>
-    <p>Telefon: 123456<br />
-      E-Mail: volker.schuhmacher@t-online.de</p>
+      <h2>Kontakt</h2>
+      <p>Telefon: 123456<br />
+        E-Mail: volker.schuhmacher@t-online.de</p>
 
-    <h3>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h3>
-    <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
-      teilzunehmen.</p>
-    <footer class="primary-footer | padding-block-700 bg-neutral-900 text-neutral-100">
+      <h3>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h3>
+      <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
+        teilzunehmen.</p>
+    </div>
+    <footer class="primary-footer | padding-block-400 bg-neutral-900 text-neutral-100">
       <div class="container">
         <div class="primary-footer-wrapper">
           <div class="primary-footer-nav">
             <nav class="footer-nav">
-              <ul>
-                <li><a href="index.html"  target="_self">Home</a></li>
+              <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer">
+                <li><a href="index.html" target="_self">Home</a></li>
                 <li><a href="#">Impressum</a></li>
                 <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
                 <li><a href="credits.html" target="_self">Credits</a></li>
@@ -49,9 +48,16 @@
           <div class="primary-footer-form">
             <p>&copy; Volker Schuhmacher 2024</p>
           </div>
+          <div class="primary-footer-social">
+            <a href="https://www.linkedin.com/in/volker-schuhmacher-1263802b9/" target="_blank">
+              <img src="In-White-14@2x.png" alt="linkedin logo" />
+            </a>
+          </div>
         </div>
       </div>
-    </footer>
+  </div>
+  </footer>
+
   </div>
 </body>
 
