added modal cookies

--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
   </header>
 
   <div class="container">
+    <dialog data-modal class="modal">
+      <div>
+        <p class="margin-bottom-400">Diese Seite verwendet Cookies. Wenn Sie auf der Seite weitersurfen, erklären Sie sich mit der Verwendung von Cookies einverstanden.</p>
+        <div class="button-container margin-bottom-400">
+        <button data-modal-accept class="button">Alles akzeptieren</button>
+      </div>
+        <div class="modal-footer |  padding-block-400">
+          <nav class="modal-nav">
+            <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer">
+              <li><a href="impressum.html" target="_self">Impressum</a></li>
+              <li><a href="datenschutz.html" target="_self">Datenschutz</a></li>
+            </ul>
+          </nav>
+          <div class="modal-copy">
+            <p>&copy; Volker Schuhmacher 2024</p>
+          </div>
+        </div>
+      </div>
+    </dialog>
+
     <div class="even-columns padding-bottom-400">
       <div class="blob-1">
         <h2>Persönliche Daten</h2>
@@ -57,7 +77,8 @@
           Französisch: fließend, Spanisch: gut, Arabisch:
           Grundkenntnisse</p>
         <p class="text-accent-400">Interessen</p>
-        <p>IPv6 und FreeBSD in der Praxis als technische Herausforderungen, Kochen für und mit Freunden, Radfahren zur Entspannung</p>
+        <p>IPv6 und FreeBSD in der Praxis als technische Herausforderungen, Kochen für und mit Freunden, Radfahren zur
+          Entspannung</p>
       </div>
       <div>
         <h2>Berufliche Laufbahn</h2>
@@ -70,7 +91,7 @@
         <p class="text-accent-400">April 2017 - November 2018</p>
         <p><span class="fw-semi-bold fs-500">IT Portfolio Manager</span> - Telekom IT GmbH</p>
         <p>Roadmap Delivery Managment,</br>
-        ERP Projekte im Umfeld Mergers &amp; Acqusitions</p>
+          ERP Projekte im Umfeld Mergers &amp; Acqusitions</p>
         <hr>
         <p class="text-accent-400">November 2011 - März 2017</p>
         <p><span class="fw-semi-bold fs-500">Senior Programm Manager</span> - T-Systems International GmbH</p>
@@ -110,13 +131,14 @@
           </div>
           <div class="primary-footer-social">
             <a href="https://www.linkedin.com/in/volker-schuhmacher-1263802b9/" target="_blank">
-              <img src="In-White-14@2x.png" alt="linkedin logo"/>
+              <img src="In-White-14@2x.png" alt="linkedin logo" />
             </a>
-          </div>
           </div>
         </div>
       </div>
-    </footer>
+  </div>
+  </footer>
 </body>
+<script src="app.js"></script>
 
 </html>
