--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <meta name="author" content="fontanero management systems">
   <meta name="keywords" content="Agile Coach SAFe Programm Consultant">
   <meta name="keywords" content="KANBAN Lean Transformation Management Scrum">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/android-chrome-192x192.png">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="style.css">
 </head>
 
