--- a/datenschutz.html
+++ b/datenschutz.html
@@ -342,6 +342,10 @@
             target="_blank" rel="noopener noreferrer">https://developers.google.com/fonts/faq</a> und in der
           Datenschutzerkl&auml;rung von Google: <a href="https://policies.google.com/privacy?hl=de" target="_blank"
             rel="noopener noreferrer">https://policies.google.com/privacy?hl=de</a>.</p>
+            <picture class="padding-block-400">             
+              <source media="(min-width: 50em)" srcset="./img/thumbnail_datenschutz-siegel-dark-horizontal-large.png" width="20%">
+              <img src="./img/thumbnail_datenschutz-siegel-dark-vertical-large.png" alt="Datenschutz  Siegel" width="180px">
+            </picture>      
       </div>
       <footer class="primary-footer | padding-block-400 bg-neutral-900 text-neutral-100">
         <div class="container">
