--- a/impressum.html
+++ b/impressum.html
@@ -28,9 +28,14 @@
       <p>Telefon: 123456<br />
         E-Mail: volker.schuhmacher@t-online.de</p>
 
-      <h3>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h3>
+      <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2>
       <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
         teilzunehmen.</p>
+        <picture class="padding-block-400">             
+          <source media="(min-width: 50em)" srcset="./img/thumbnail_impressum-siegel-dark-horizontal-large.png" width="20%">
+          <img src="./img/thumbnail_impressum-siegel-dark-vertical-large.png" alt="Impressum  Siegel" width="180px">
+        </picture>      
+
     </div>
     <footer class="primary-footer | padding-block-400 bg-neutral-900 text-neutral-100">
       <div class="container">
